--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,67 +1,151 @@
   trigger:
   - '*'
   
-  pool:
-    vmImage: 'ubuntu-18.04'
-    demands:
-    - npm
-  
   variables:
     buildConfiguration: 'Release'
-    wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
-    dotnetSdkVersion: '3.1.300'
+    releaseBranchName: 'release'
   
-  steps:
-  - task: UseDotNet@2
-    displayName: 'Use .NET Core SDK $(dotnetSdkVersion)'
-    inputs:
-      version: '$(dotnetSdkVersion)'
+  schedules:
+  - cron: '0 3 * * *'
+    displayName: Deploy every day at 3 A.M.
+    branches:
+      include:
+      - release
+    always: false
   
-  - task: Npm@1
-    displayName: 'Run npm install'
-    inputs:
-      verbose: false
+  stages:
+  - stage: 'Build'
+    displayName: 'Build the web application'
+    jobs: 
+    - job: 'Build'
+      displayName: 'Build job'
+      pool:
+        vmImage: 'ubuntu-18.04'
+        demands:
+        - npm
   
-  - script: './node_modules/.bin/node-sass $(wwwrootDir) --output $(wwwrootDir)'
-    displayName: 'Compile Sass assets'
+      variables:
+        wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
+        dotnetSdkVersion: '3.1.300'
   
-  - task: gulp@1
-    displayName: 'Run gulp tasks'
+      steps:
+      - task: UseDotNet@2
+        displayName: 'Use .NET Core SDK $(dotnetSdkVersion)'
+        inputs:
+          version: '$(dotnetSdkVersion)'
   
-  - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
-    displayName: 'Write build info'
-    workingDirectory: $(wwwrootDir)
+      - task: Npm@1
+        displayName: 'Run npm install'
+        inputs:
+          verbose: false
   
-  - task: DotNetCoreCLI@2
-    displayName: 'Restore project dependencies'
-    inputs:
-      command: 'restore'
-      projects: '**/*.csproj'
+      - script: './node_modules/.bin/node-sass $(wwwrootDir) --output $(wwwrootDir)'
+        displayName: 'Compile Sass assets'
   
-  - task: DotNetCoreCLI@2
-    displayName: 'Build the project - $(buildConfiguration)'
-    inputs:
-      command: 'build'
-      arguments: '--no-restore --configuration $(buildConfiguration)'
-      projects: '**/*.csproj'
+      - task: gulp@1
+        displayName: 'Run gulp tasks'
   
-  - task: DotNetCoreCLI@2
-    displayName: 'Run unit tests - $(buildConfiguration)'
-    inputs:
-      command: 'test'
-      arguments: '--no-build --configuration $(buildConfiguration)'
-      publishTestResults: true
-      projects: '**/*.Tests.csproj'
+      - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
+        displayName: 'Write build info'
+        workingDirectory: $(wwwrootDir)
   
-  - task: DotNetCoreCLI@2
-    displayName: 'Publish the project - $(buildConfiguration)'
-    inputs:
-      command: 'publish'
-      projects: '**/*.csproj'
-      publishWebProjects: false
-      arguments: '--no-build --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/$(buildConfiguration)'
-      zipAfterPublish: true
+      - task: DotNetCoreCLI@2
+        displayName: 'Restore project dependencies'
+        inputs:
+          command: 'restore'
+          projects: '**/*.csproj'
   
-  - task: PublishBuildArtifacts@1
-    displayName: 'Publish Artifact: drop'
-    condition: succeeded()
+      - task: DotNetCoreCLI@2
+        displayName: 'Build the project - $(buildConfiguration)'
+        inputs:
+          command: 'build'
+          arguments: '--no-restore --configuration $(buildConfiguration)'
+          projects: '**/*.csproj'
+  
+      - task: DotNetCoreCLI@2
+        displayName: 'Publish the project - $(buildConfiguration)'
+        inputs:
+          command: 'publish'
+          projects: '**/*.csproj'
+          publishWebProjects: false
+          arguments: '--no-build --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/$(buildConfiguration)'
+          zipAfterPublish: true
+  
+      - publish: '$(Build.ArtifactStagingDirectory)'
+        artifact: drop
+  
+  - stage: 'Dev'
+    displayName: 'Deploy to the dev environment'
+    dependsOn: Build
+    condition: |
+      and
+      (
+        succeeded(),
+        eq(variables['Build.SourceBranchName'], variables['releaseBranchName'])
+      )
+    jobs:
+    - deployment: Deploy
+      pool:
+        vmImage: 'ubuntu-18.04'
+      environment: dev
+      variables:
+      - group: Release
+      strategy:
+        runOnce:
+          deploy:
+            steps:
+            - download: current
+              artifact: drop
+            - task: AzureWebApp@1
+              displayName: 'Azure App Service Deploy: website'
+              inputs:
+                azureSubscription: 'TailspinserviceconnectionforAzure'
+                appName: '$(WebAppNameDev)'
+                package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
+  
+  - stage: 'Test'
+    displayName: 'Deploy to the test environment'
+    dependsOn: Dev
+    #condition: eq(variables['Build.Reason'], 'Schedule')
+    jobs:
+    - deployment: Deploy
+      pool:
+        vmImage: 'ubuntu-18.04'
+      environment: test
+      variables:
+      - group: 'Release'
+      strategy:
+        runOnce:
+          deploy:
+            steps:
+            - download: current
+              artifact: drop
+            - task: AzureWebApp@1
+              displayName: 'Azure App Service Deploy: website'
+              inputs:
+                azureSubscription: 'TailspinserviceconnectionforAzure'
+                appName: '$(WebAppNameTest)'
+                package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
+  
+  - stage: 'Production'
+    displayName: 'Deploy to the staging environment'
+    dependsOn: Test
+    jobs:
+    - deployment: Deploy
+      pool:
+        vmImage: 'ubuntu-18.04'
+      environment: production
+      variables:
+      - group: 'Release'
+      strategy:
+        runOnce:
+          deploy:
+            steps:
+            - download: current
+              artifact: drop
+            - task: AzureWebApp@1
+              displayName: 'Azure App Service Deploy: website'
+              inputs:
+                azureSubscription: 'TailspinserviceconnectionforAzure'
+                appName: '$(WebAppNameProduction)'
+                package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
