--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -125,7 +125,7 @@
               inputs:
                 azureSubscription: 'TailspinserviceconnectionforAzure'
                 appName: '$(WebAppNameTest)'
-                package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/Tailspin.SpaceGame.Web.zip.zip'
+                package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/Tailspin.SpaceGame.Web.zip'
   
   - stage: 'Production'
     displayName: 'Deploy to the staging environment'
@@ -148,4 +148,4 @@
               inputs:
                 azureSubscription: 'TailspinserviceconnectionforAzure'
                 appName: '$(WebAppNameProduction)'
-                package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/Tailspin.SpaceGame.Web.zip.zip'
+                package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/Tailspin.SpaceGame.Web.zip'
