--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -129,13 +129,13 @@
                 package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/Tailspin.SpaceGame.Web.zip'
   
   - stage: 'Production'
-    displayName: 'Deploy to the staging environment'
+    displayName: 'Blue green deployment'
     dependsOn: Test
     jobs:
     - deployment: Deploy
       pool:
         vmImage: 'ubuntu-18.04'
-      environment: production
+      environment: staging
       variables:
       - group: 'Release'
       strategy:
@@ -148,5 +148,17 @@
               displayName: 'Azure App Service Deploy: website'
               inputs:
                 azureSubscription: 'TailspinserviceconnectionforAzure'
+                deployToSlotOrASE: 'true'
+                resourceGroupName: 'az400febtailspinRG'
+                slotName: 'staging'
                 appName: '$(WebAppNameProduction)'
                 package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/Tailspin.SpaceGame.Web.zip'
+            - task: AzureAppServiceManage@0
+              displayName: 'Swap deployment slots'
+              inputs:
+                azureSubscription: 'TailspinserviceconnectionforAzure'
+                resourceGroupName: 'az400febtailspinRG'
+                webAppName: '$(WebAppNameProduction)'
+                sourceSlot: 'staging'
+                targetSlot: 'production'
+                action: 'Swap Slots'
